.provarCaches/00D4P000000xR5ZUAU/objects/Flosum__Sync_Job__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__BranchId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Flosum__Branch__c</referenceTo>
        <relationshipLabel>Sync Jobs</relationshipLabel>
        <relationshipName>Sync_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Branch_Name__c</fullName>
        <label>Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Commit_On__c</fullName>
        <label>Commit On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flosum__Commit__c</fullName>
        <label>Commit</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Committer__c</fullName>
        <label>Committer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__CredentialsId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repository Settings</label>
        <referenceTo>Flosum__RepositoryCredentials__c</referenceTo>
        <relationshipLabel>Sync Jobs</relationshipLabel>
        <relationshipName>Sync_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Fails__c</fullName>
        <label>Fails</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flosum__Log__c</fullName>
        <label>Log</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flosum__Number__c</fullName>
        <displayFormat>J-{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Flosum__State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>QUEUED</fullName>
                    <default>true</default>
                    <label>QUEUED</label>
                </value>
                <value>
                    <fullName>INPROGRESS</fullName>
                </value>
                <value>
                    <fullName>DONE</fullName>
                </value>
                <value>
                    <fullName>CANCELED</fullName>
                </value>
                <value>
                    <fullName>PARTIALLY DONE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__Sync_OperationId__c</fullName>
        <label>Sync_OperationId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flosum__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SFGIT</fullName>
                </value>
                <value>
                    <fullName>GITSF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__UserId__c</fullName>
        <label>UserId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__isSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSuccess</label>
        <type>Checkbox</type>
    </fields>
    <label>Sync Job</label>
    <nameField>
        <label>Sync_Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sync Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>